# F1-telemetry-analysis

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_downforce.py  test.su2
.opencode/plans/: rectangle_domain_fix.md
docs/: cfd_front_wing.html  cfd_venturi.html  cornering.html  downforce.html  drs_active_aero.html  implementation.html  index.html  powertrain.html  ride_height.html  strategy.html  theory.html  track_setups.html
docs/assets/data/: performance_envelope.json  telemetry_traces.json  track_map.json
docs/css/: style.css
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
runners/: all.py  build_site.py  cfd_front_wing.py  cfd_venturi.py  cornering.py  downforce.py  drs.py  interactive.py  powertrain.py  ride_height.py  strategy.py  track_setups.py
src/: aero_models.py  build_site.py
src/analysis/: cornering.py  downforce.py  drs.py  powertrain.py  ride_height.py  strategy.py  track_setups.py
src/cfd/: airfoil.py  pyvista_viz.py  su2_runner.py  validate.py  venturi.py  wing.py
src/core/: models.py  physics.py  style.py  telemetry.py
src/viz/: interactive.py
